--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="/zocoPage.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/zoco_cover.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/zoco_cover.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/zoco_cover.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/zoco_cover.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -162,9 +162,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project02.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/ttgd.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/ttgd.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/ttgd.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/ttgd.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -174,9 +174,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project03.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/WCGb.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/WCGb.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/WCGb.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/WCGb.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -185,9 +185,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project05.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/dcqk-feature.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/dcqk-feature.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/dcqk-feature.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/dcqk-feature.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -198,9 +198,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project05.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/BBD-feature5.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/BBD-feature5.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/BBD-feature5.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/BBD-feature5.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -210,9 +210,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project06.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/btmedia_porfolio-feature2.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/btmedia_porfolio-feature2.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/btmedia_porfolio-feature2.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/btmedia_porfolio-feature2.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -222,9 +222,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project07.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/vietgame-featureb.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/vietgame-featureb.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/vietgame-featureb.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/vietgame-featureb.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -234,9 +234,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project08.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/phototrip5.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/phototrip5.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/phototrip5.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/phototrip5.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -245,9 +245,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project07.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/phongthan_vng.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/phongthan_vng.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/phongthan_vng.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/phongthan_vng.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -257,9 +257,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project08.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/vltk_vng.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/vltk_vng.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/vltk_vng.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/vltk_vng.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -268,9 +268,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project08.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="/images/projects/vng-feature.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="./images/projects/vng-feature.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="/images/projects/vng-feature.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="./images/projects/vng-feature.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
