--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project08.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="images/projects/vltk_vng.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/xlfsiavkkfygwpy6khir.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="images/projects/vltk_vng.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/xlfsiavkkfygwpy6khir.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
@@ -268,9 +268,9 @@
                                                     <div class="img-mask">
                                                         <a class="slide-link" data-type="page-transition" href="project08.html"></a>
                                                         <div class="section-image  trigger-item-link">
-                                                        	<img src="images/projects/vng-feature.jpg" class="item-image grid__item-img" alt="">
+                                                        	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/yzch0uxs0wqelj95tqmi.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
-                                                        <img src="images/projects/vng-feature.jpg" class="grid__item-img grid__item-img--large" alt="">                              
+                                                        <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/yzch0uxs0wqelj95tqmi.jpg" class="grid__item-img grid__item-img--large" alt="">                              
                                                     </div>
                                                 </div>
                                             </div>
