--- a/index.html
+++ b/index.html
@@ -74,24 +74,11 @@
                             <div class="inner">           
                                 <ul data-breakpoint="10025" class="flexnav">
                                     <li class="link menu-timeline"><a class="" href="#"><div class="before-span"><span data-hover="Portfolio">Portfolio</span></div></a>
-                                        <ul>
-                                            <li><a class="ajax-link active" href="index.html" data-type="page-transition">Showcase Carousel</a></li>
-                                            <li><a class="ajax-link" href="index-showcase-grid.html" data-type="page-transition">Showcase Grid</a></li>
-                                            <li><a class="ajax-link" href="index-showcase-slider.html" data-type="page-transition">Showcase Slider</a></li>
-                                            <li><a class="ajax-link" href="index-showcase-list.html" data-type="page-transition">Showcase List</a></li>
-                                            <li><a class="ajax-link" href="index-showcase-reverse.html" data-type="page-transition">Showcase Reverse</a></li>                                            
-                                            <li><a class="ajax-link" href="index-showcase-gallery.html" data-type="page-transition">Showcase Gallery</a></li>
-                                        </ul>
+                                        
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="about.html"><div class="before-span"><span data-hover="About">About</span></div></a></li>
                                     <li class="link menu-timeline"><a class="ajax-link" data-type="page-transition" href="contact.html"><div class="before-span"><span data-hover="Contact">Contact</span></div></a></li>
-                                    <li class="link menu-timeline"><a class="" href="#"><div class="before-span"><span data-hover="More">More</span></div></a>
-                                        <ul>
-                                            <li><a class="ajax-link" href="typography.html" data-type="page-transition">Typography</a></li>                                         
-                                            <li><a class="ajax-link" href="multimedia.html" data-type="page-transition">Multimedia</a></li>
-                                            <li><a class="ajax-link" href="shortcodes.html" data-type="page-transition">Shortcodes</a></li>
-                                        </ul>
-                                    </li>
+                                    
                                 </ul>            
                             </div>
                         </div> 
@@ -148,7 +135,7 @@
                                             <div class="clapat-slide" data-color="#171717">
                                                 <div class="slide-inner trigger-item">
                                                     <div class="img-mask">
-                                                        <a class="slide-link" data-type="page-transition" href="/zocoPage.html"></a>
+                                                        <a class="slide-link" data-type="page-transition" href="/project01.html"></a>
                                                         <div class="section-image  trigger-item-link">
                                                         	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/e2ydmehqphfbmopdvh3k.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
@@ -183,7 +170,7 @@
                                             <div class="clapat-slide" data-color="#ec1c00">
                                                 <div class="slide-inner trigger-item">
                                                     <div class="img-mask">
-                                                        <a class="slide-link" data-type="page-transition" href="project05.html"></a>
+                                                        <a class="slide-link" data-type="page-transition" href="project04.html"></a>
                                                         <div class="section-image  trigger-item-link">
                                                         	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/pccnxkmjwksee9zajvk1.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
@@ -243,7 +230,7 @@
                                             <div class="clapat-slide" data-color="#232221">
                                                 <div class="slide-inner trigger-item">
                                                     <div class="img-mask">
-                                                        <a class="slide-link" data-type="page-transition" href="project07.html"></a>
+                                                        <a class="slide-link" data-type="page-transition" href="project09.html"></a>
                                                         <div class="section-image  trigger-item-link">
                                                         	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369019/hello/mvvor1x73u71zstuvcep.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
@@ -255,7 +242,7 @@
                                             <div class="clapat-slide" data-color="#648c33">
                                                 <div class="slide-inner trigger-item">
                                                     <div class="img-mask">
-                                                        <a class="slide-link" data-type="page-transition" href="project08.html"></a>
+                                                        <a class="slide-link" data-type="page-transition" href="project10.html"></a>
                                                         <div class="section-image  trigger-item-link">
                                                         	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/xlfsiavkkfygwpy6khir.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
@@ -266,7 +253,7 @@
                                             <div class="clapat-slide" data-color="#648c33">
                                                 <div class="slide-inner trigger-item">
                                                     <div class="img-mask">
-                                                        <a class="slide-link" data-type="page-transition" href="project08.html"></a>
+                                                        <a class="slide-link" data-type="page-transition" href="project11.html"></a>
                                                         <div class="section-image  trigger-item-link">
                                                         	<img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/yzch0uxs0wqelj95tqmi.jpg" class="item-image grid__item-img" alt="">
                                                         </div>                                                
