--- a/project10.html
+++ b/project10.html
@@ -160,7 +160,7 @@
                         <div id="hero-image-wrapper">
                             <div id="hero-background-layer" class="parallax-scroll-image">
                                 <div id="hero-bg-image"
-                                    style="background-image:url('https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/nrkzefcfluvvzc3da3nh.jpg')">
+                                    style="background-image:url('https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/xlfsiavkkfygwpy6khir.jpg')">
                                 </div>
                             </div>
                         </div>
@@ -201,67 +201,14 @@
                                 <!--/Row -->
 
 
-                                <!-- Row -->
-                                <div class="content-row text-align-center row_padding_top row_padding_bottom light-section change-header-color"
-                                    data-bgcolor="#fff">
-
-
-                                    <div class="pinned-gallery">
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374932/hello/image/llwqjoiayuypqbvbs4ow.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/tjez1b6g6h5swtfpvdkw.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/agwpjdj4phtlylefgkwv.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374932/hello/image/kkff3upbqlmho4mo8jjv.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374932/hello/image/wqvpbnta4zmi1pu0m8nx.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374932/hello/image/jzu61x3sow6i0v6fpvqn.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/l5sohfbixbvw8h7nxszg.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/avd3rxfxygodlwc7vi0v.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/gnjt8ehast5tkalwyrtr.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/ldktk6ldpxxclprkex9k.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                        <div class="pinned-image">
-                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687374931/hello/image/u1yaxolpzyrl4y0gdqpp.jpg"
-                                                alt="Image Title">
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <!--/Row -->
+                              
 
 
                                 <!-- Row -->
                                 <div class="content-row small row_padding_bottom light-section change-header-color text-align-center"
                                     data-bgcolor="#fff">
 
-                                    <h5 class="has-mask-fill">As a leader of BTMedia, or well know as BUTTRE, I oversaw
+                                    <p class="has-mask-fill">As a leader of BTMedia, or well know as BUTTRE, I oversaw
                                         all aspects of game-related activities for World Cyber Games, a premier global
                                         esports tournament founded by Samsung. This included selecting the titles,
                                         setting tournament rules, training personnel, handling complaints, overseeing PC
@@ -289,13 +236,12 @@
                                         <div class="next-caption-wrapper">
                                             <div class="caption-wrapper">
                                                 <a class="next-ajax-link-project auto-trigger"
-                                                    data-type="page-transition" href="project04.html"
+                                                    data-type="page-transition" href="project03.html"
                                                     data-color="#963a8d" data-firstline="Next"
                                                     data-secondline="Project"></a>
                                                 <div class="next-caption">
                                                     <div class="next-hero-counter"><span>0</span></div>
-                                                    <div class="next-hero-title"><span>Rising Empire - Đế Chế Quật
-                                                            Khởi</span></div>
+                                                    <div class="next-hero-title"><span>VNG Corporate</span></div>
                                                     <div class="next-hero-subtitle"><span>Next Project</span></div>
                                                 </div>
                                             </div>
@@ -304,7 +250,7 @@
                                     <div class="next-project-image-wrapper">
                                         <div class="next-project-image">
                                             <div class="next-project-image-bg"
-                                                style="background-image:url('https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369020/hello/pccnxkmjwksee9zajvk1.jpg')">
+                                                style="background-image:url('https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/yzch0uxs0wqelj95tqmi.jpg')">
                                             </div>
                                         </div>
                                     </div>
