--- a/index.html
+++ b/index.html
@@ -151,9 +151,25 @@
                                                     <div class="slide-inner trigger-item">
                                                         <div class="img-mask">
                                                             <a class="slide-link" data-type="page-transition"
+                                                                href="#"></a>
+                                                            <div class="section-image  trigger-item-link">
+                                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687381059/hello/v3hy5e02rteno4zhuff5.jpg"
+                                                                    class="item-image grid__item-img" alt="">
+                                                            </div>
+                                                                <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687381059/hello/v3hy5e02rteno4zhuff5.jpg"
+                                                                class="grid__item-img grid__item-img--large" alt="">
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+
+                                                <div class="clapat-slide" data-color="#171717">
+                                                    <div class="slide-inner trigger-item">
+                                                        <div class="img-mask">
+                                                            <a class="slide-link" data-type="page-transition"
                                                                 href="/project01.html"></a>
                                                             <div class="section-image  trigger-item-link">
-                                                                <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/e2ydmehqphfbmopdvh3k.jpg"
+                                                            <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/e2ydmehqphfbmopdvh3k.jpg"
                                                                     class="item-image grid__item-img" alt="">
                                                             </div>
                                                                 <img src="https://res.cloudinary.com/dkcfd8eib/image/upload/v1687369021/hello/e2ydmehqphfbmopdvh3k.jpg"
@@ -324,6 +340,9 @@
                                                             <div class="clapat-sync-slider-viewport">
 
                                                                 <div class="clapat-sync-slide">
+                                                                    <div class="slide-title"><span>BAO TRINH</span></div>
+                                                                </div>
+                                                                <div class="clapat-sync-slide">
                                                                     <div class="slide-title"><span>ZOCO</span></div>
                                                                 </div>
                                                                 <div class="clapat-sync-slide">
@@ -377,6 +396,9 @@
                                                         <div class="clapat-sync-slider-wrapper">
                                                             <div class="clapat-sync-slider-viewport">
 
+                                                                <div class="clapat-sync-slide">
+                                                                    <div class="slide-subtitle"><span>Entrepreneur. Vietnamese. New Zealand</span></div>
+                                                                </div>
                                                                 <div class="clapat-sync-slide">
                                                                     <div class="slide-subtitle"><span>Fashion in your
                                                                             style</span></div>
@@ -524,8 +546,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.4.0/smooth-scrollbar.js'></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpK1sWi3J3EbUOkF_K4-UHzi285HyFX5M&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpK1sWi3J3EbUOkF_K4-UHzi285HyFX5M&sensor=false"></script>
 
     <script src="js/clapat.js"></script>
     <script src="js/plugins.js"></script>
